[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "doc-scraper"
version = "0.1.0"
description = "Scrape documentation sites into local Markdown with downloaded images"
authors = [
  { name = "ErbunTech" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "markdownify>=0.11.6",
  "readability-lxml>=0.8.1",
  "lxml>=4.9.0",
  "python-slugify>=8.0.4",
  "tqdm>=4.66.0",
]

[project.scripts]
doc-scraper = "scrape_docs:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
